test_regress/t/t_randomize_method_nclass_bad.out
%Error: t/t_randomize_method_nclass_bad.v:9:7: Calling implicit class method 'randomize' without being under class
                                             : ... In instance t
    9 |       randomize(1);
      |       ^~~~~~~~~
%Error: t/t_randomize_method_nclass_bad.v:10:7: Calling implicit class method 'srandom' without being under class
                                              : ... In instance t
   10 |       srandom(1);
      |       ^~~~~~~
%Error: Exiting due to
